@@ -1,3 +1,8 @@
+Thu Mar 19 17:03:48 1998  Martin Mares  <mj@lomikel.karlin.mff.cuni.cz>
+
+	* lspci.c (grow_tree, show_tree_dev, print_it): Fixed displaying
+	of PCI-to-PCI bridges in the tree format.
+
 Sun Feb 15 10:12:25 1998  Martin Mares  <mj@albireo.ucw.cz>
 
 	* lspci.c (show_machine): Added non-verbose mode of machine-readable
